Replaced Role enum with Role entity and updated user-role mapping